.kube/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-deployment
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: application
          image: loicpincon/app-spa-intex:1.0.3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: application-service
spec:
  selector:
    app: application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP  # Change to LoadBalancer or NodePort if external access is needed
