.kube/mosquito.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquito-deployment
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: mosquito
  template:
    metadata:
      labels:
        app: mosquito
    spec:
      containers:
        - name: mosquito
          image: eclipse-mosquitto:2.0.18
          ports:
            - containerPort: 1883
---
apiVersion: v1
kind: Service
metadata:
  name: mosquito-service
spec:
  selector:
    app: mosquito
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mosquito-service-ui
spec:
  selector:
    app: mosquito
  ports:
    - protocol: TCP
      port: 9003
      targetPort: 9003
  type: ClusterIP
